--- a/taroco-rbac/src/main/resources/bootstrap.yml
+++ b/taroco-rbac/src/main/resources/bootstrap.yml
@@ -1,6 +1,14 @@
 server:
   port: 9009
 
+app:
+  id: 1
+
+apollo:
+  meta: http://localhost:8080
+  bootstrap:
+    enabled: true
+
 spring:
   application:
     name: taroco-rbac-service
