--- a/taroco-rbac/pom.xml
+++ b/taroco-rbac/pom.xml
@@ -14,6 +14,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.ctrip.framework.apollo</groupId>
+			<artifactId>apollo-client</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>cn.taroco</groupId>
 			<artifactId>taroco-log-spring-boot-starter</artifactId>
 		</dependency>
