--- a/taroco-cloud/cloud-config/src/main/resources/config-server/application-dev.yml
+++ b/taroco-cloud/cloud-config/src/main/resources/config-server/application-dev.yml
@@ -7,9 +7,9 @@ base:
   mysql:
     url: jdbc:mysql://39.98.53.99:3306
   redis:
-    host: ngrok.ruiysoft.com
+    host: 1.119.197.166
     port: 6379
-    password: insurance2018$
+    password: 123qwe!@#
   zipkin:
     url: http://111.231.192.110:10003/
 
@@ -30,6 +30,9 @@ spring:
   sleuth:
     sampler:
       percentage: 1.0
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
 
 server:
   tomcat:
@@ -77,19 +80,20 @@ ribbon:
     enabled: true
     clients: taroco-admin,taroco-rbac-service,taroco-authentication-server
   # ribbon请求连接的超时时间 默认2秒 ms
-  ConnectTimeout: 5000
+  ConnectTimeout: 20000
   # 请求处理的超时时间 默认5秒 ms
-  ReadTimeout: 5000
+  ReadTimeout: 20000
+  SocketTimeout: 20000
   # 对所有操作请求都进行重试,不配置这个MaxAutoRetries不起作用 默认false
   OkToRetryOnAllOperations: true
   # 对当前实例的重试次数 默认0
-  MaxAutoRetries: 1
+  MaxAutoRetries: 2
   # 切换实例的重试次数 默认1
   MaxAutoRetriesNextServer: 2
   # 自定义的ribbon负载均衡策略 默认com.netflix.loadbalancer.AvailabilityFilteringRule
   NFLoadBalancerRuleClassName: cn.taroco.common.ribbon.XlabelWeightMetadataRule
   # 从注册中心刷新servelist的时间 默认30秒 ms
-  ServerListRefreshInterval: 15000
+  ServerListRefreshInterval: 30000
 
 
 feign:
